--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -18,7 +18,7 @@ dependencies:
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - ncurses=6.1=hf484d3e_0
-  - openssl=1.1.1=h7b6447c_0
+  - openssl=1.1.1a=h7b6447c_0
   - parso=0.3.1=py36_0
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
@@ -30,17 +30,17 @@ dependencies:
   - python-dateutil=2.7.5=py36_0
   - pyzmq=17.1.2=py36h14c3975_0
   - readline=7.0=h7b6447c_5
-  - setuptools=40.5.0=py36_0
+  - setuptools=40.6.2=py36_0
   - six=1.11.0=py36_1
-  - sqlite=3.25.2=h7b6447c_0
+  - sqlite=3.25.3=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - tornado=5.1.1=py36h7b6447c_0
   - traitlets=4.3.2=py36_0
   - wcwidth=0.1.7=py36_0
-  - wheel=0.32.2=py36_0
+  - wheel=0.32.3=py36_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.2.5=hf484d3e_1
-  - zlib=1.2.11=ha838bed_2
+  - zlib=1.2.11=h7b6447c_3
   - pip:
     - absl-py==0.6.1
     - alabaster==0.7.12
@@ -55,7 +55,7 @@ dependencies:
     - docutils==0.14
     - entrypoints==0.2.3
     - findspark==1.3.0
-    - folium==0.6.0
+    - folium==0.7.0
     - gast==0.2.0
     - geojson==2.4.1
     - graphviz==0.10.1
@@ -91,7 +91,7 @@ dependencies:
     - pytz==2018.7
     - pyyaml==3.13
     - requests==2.20.0
-    - scikit-learn==0.20.0
+    - scikit-learn==0.20.1
     - scipy==1.1.0
     - seaborn==0.9.0
     - send2trash==1.5.0
@@ -115,5 +115,5 @@ dependencies:
     - widgetsnbextension==3.4.2
     - xarray==0.10.7
     - xgboost==0.81
-prefix: /home/alberto/anaconda3/envs/datascience36
+prefix: /opt/conda/envs/datascience36
 
