--- a/master/work_dir/scala_apps/example/pom.xml
+++ b/master/work_dir/scala_apps/example/pom.xml
@@ -11,6 +11,7 @@
     <spark.version>2.3.1</spark.version>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
+    <elasticsearch.version>20_2.11</elasticsearch.version>
     <java.version>1.8</java.version>
     <spark.kafka.version>${spark.version}</spark.kafka.version>
   </properties>
@@ -53,6 +54,12 @@
          <artifactId>hadoop-client</artifactId>
          <version>${hadoop.version}</version>
        </dependency>
+
+      <dependency> <!-- Elasticsearch -->
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch-spark-${elasticsearch.version}</artifactId>
+        <version>6.5.1</version>
+      </dependency>
 
   </dependencies>
 
