--- a/master/work_dir/scala_apps/example/pom.xml
+++ b/master/work_dir/scala_apps/example/pom.xml
@@ -11,7 +11,8 @@
     <spark.version>2.3.1</spark.version>
     <scala.version>2.11.8</scala.version>
     <scala.binary.version>2.11</scala.binary.version>
-    <elasticsearch.version>20_2.11</elasticsearch.version>
+    <elasticsearch.binary.version>20_2.11</elasticsearch.binary.version>
+    <elasticsearch.version>6.5.1</elasticsearch.version>
     <java.version>1.8</java.version>
     <spark.kafka.version>${spark.version}</spark.kafka.version>
   </properties>
@@ -57,8 +58,8 @@
 
       <dependency> <!-- Elasticsearch -->
         <groupId>org.elasticsearch</groupId>
-        <artifactId>elasticsearch-spark-${elasticsearch.version}</artifactId>
-        <version>6.5.1</version>
+        <artifactId>elasticsearch-spark-${elasticsearch.binary.version}</artifactId>
+        <version>${elasticsearch.version}</version>
       </dependency>
 
   </dependencies>
