custom Dockerfile, upgraded docker-compose and dependencies

--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -1,16 +1,57 @@
-FROM gettyimages/spark:2.3.1-hadoop-3.0
+FROM openjdk:8-slim-stretch as spark
+
+# FROM gettyimages/spark
+
+RUN apt-get update \
+    && apt-get install -y curl unzip \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+
+# HADOOP
+
+ENV HADOOP_VERSION 3.1.1
+ENV HADOOP_HOME /usr/hadoop-$HADOOP_VERSION
+ENV HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
+ENV PATH $PATH:$HADOOP_HOME/bin
+RUN curl -sL --retry 3 \
+    "https://www-eu.apache.org/dist/hadoop/common/hadoop-$HADOOP_VERSION/hadoop-$HADOOP_VERSION.tar.gz" \
+    | gunzip \
+    | tar -x -C /usr/ \
+    && rm -rf $HADOOP_HOME/share/doc \
+    && chown -R root:root $HADOOP_HOME
+
+# SPARK
+
+ENV SPARK_VERSION 2.4.0
+ENV SPARK_PACKAGE spark-${SPARK_VERSION}-bin-without-hadoop
+ENV SPARK_HOME /usr/spark-${SPARK_VERSION}
+ENV SPARK_DIST_CLASSPATH="$HADOOP_HOME/etc/hadoop/*:$HADOOP_HOME/share/hadoop/common/lib/*:$HADOOP_HOME/share/hadoop/common/*:$HADOOP_HOME/share/hadoop/hdfs/*:$HADOOP_HOME/share/hadoop/hdfs/lib/*:$HADOOP_HOME/share/hadoop/hdfs/*:$HADOOP_HOME/share/hadoop/yarn/lib/*:$HADOOP_HOME/share/hadoop/yarn/*:$HADOOP_HOME/share/hadoop/mapreduce/lib/*:$HADOOP_HOME/share/hadoop/mapreduce/*:$HADOOP_HOME/share/hadoop/tools/lib/*"
+ENV PATH $PATH:${SPARK_HOME}/bin
+RUN curl -sL --retry 3 \
+    "https://www.apache.org/dyn/mirrors/mirrors.cgi?action=download&filename=spark/spark-${SPARK_VERSION}/${SPARK_PACKAGE}.tgz" \
+    | gunzip \
+    | tar x -C /usr/ \
+    && mv /usr/$SPARK_PACKAGE $SPARK_HOME \
+    && chown -R root:root $SPARK_HOME
+
+WORKDIR $SPARK_HOME
+
+CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
+
+FROM spark as spark-master
 
 # FROM continuumio/miniconda3
 
- ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
- ENV PATH /opt/conda/bin:$PATH
+ENV PATH /opt/conda/bin:$PATH
 
- RUN apt-get update --fix-missing && \
-    apt-get install -y wget bzip2 ca-certificates curl git && \
+RUN apt-get update --fix-missing && \
+    apt-get install -y wget bzip2 ca-certificates git && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
- RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O ~/miniconda.sh && \
+RUN wget --quiet https://repo.anaconda.com/miniconda/Miniconda3-4.5.11-Linux-x86_64.sh -O ~/miniconda.sh && \
     /bin/bash ~/miniconda.sh -b -p /opt/conda && \
     rm ~/miniconda.sh && \
     /opt/conda/bin/conda clean -tipsy && \
@@ -18,44 +59,44 @@ FROM gettyimages/spark:2.3.1-hadoop-3.0
     echo ". /opt/conda/etc/profile.d/conda.sh" >> ~/.bashrc && \
     echo "conda activate datascience36" >> ~/.bashrc
 
- ENV TINI_VERSION v0.16.1
- ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
- RUN chmod +x /usr/bin/tini
+ENV TINI_VERSION v0.16.1
+ADD https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini /usr/bin/tini
+RUN chmod +x /usr/bin/tini
 
- ENTRYPOINT [ "/usr/bin/tini", "--" ]
+ENTRYPOINT [ "/usr/bin/tini", "--" ]
 
 # MAVEN 
 
- ENV MAVEN_VERSION 3.5.4
- RUN mkdir /opt/apache-maven
- RUN wget --quiet -c https://apache.rediris.es/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz -O apache-maven.tar.gz && \
+ENV MAVEN_VERSION 3.5.4
+RUN mkdir /opt/apache-maven
+RUN wget --quiet -c https://apache.rediris.es/maven/maven-3/${MAVEN_VERSION}/binaries/apache-maven-${MAVEN_VERSION}-bin.tar.gz -O apache-maven.tar.gz && \
     tar xzvf apache-maven.tar.gz -C /opt/apache-maven --strip-components=1 && \
     rm -f apache-maven.tar.gz && \
     ln -s /opt/apache-maven/bin/mvn /usr/bin/mvn
 
- ENV MAVEN_HOME /opt/apache-maven
- ENV PATH MAVEN_HOME:$PATH
+ENV MAVEN_HOME /opt/apache-maven
+ENV PATH MAVEN_HOME:$PATH
  
 # Jupyter
 
- RUN conda install jupyter -y --quiet
- RUN conda install nb_conda_kernels
+RUN conda install jupyter -y --quiet
+RUN conda install nb_conda_kernels
 
- # Work dir files
+# Work dir files
 
- RUN mkdir /usr/spark-2.3.1/work_dir
- WORKDIR /usr/spark-2.3.1/work_dir
- ADD ./work_dir /usr/spark-2.3.1/work_dir
+RUN mkdir /usr/spark-${SPARK_VERSION}/work_dir
+WORKDIR /usr/spark-${SPARK_VERSION}/work_dir
+ADD ./work_dir /usr/spark-${SPARK_VERSION}/work_dir
 
- # Virtual environment
+# Virtual environment
 
- RUN conda env create -f datascience36.yaml
+RUN conda env create -f datascience36.yaml
+RUN conda clean -tipsy
 
- # Compiling Scala example with MAVEN
+# Compiling Scala example with MAVEN
 
- WORKDIR /usr/spark-2.3.1/work_dir/scala_apps/example
- RUN mvn package
+WORKDIR /usr/spark-${SPARK_VERSION}/work_dir/scala_apps/example
+RUN mvn package
  
- WORKDIR $SPARK_HOME
- CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
-
+WORKDIR $SPARK_HOME
+CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
