--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -49,7 +49,9 @@ dependencies:
     - bleach==3.0.2
     - branca==0.3.1
     - chardet==3.0.4
+    - cloudpickle==0.6.1
     - cycler==0.10.0
+    - dask==1.0.0
     - deap==1.2.2
     - defusedxml==0.5.0
     - docutils==0.14
@@ -75,24 +77,28 @@ dependencies:
     - kiwisolver==1.0.1
     - markdown==3.0.1
     - markupsafe==1.1.0
-    - matplotlib==2.2.3
+    - matplotlib==3.0.2
     - mistune==0.8.4
     - nbconvert==5.4.0
     - nbformat==4.4.0
+    - networkx==2.2
     - notebook==5.7.2
-    - numpy==1.14.6
+    - numpy==1.15.4
     - packaging==18.0
     - pandas==0.23.4
     - pandocfilters==1.4.2
+    - pillow==5.3.0
     - prometheus-client==0.4.2
     - protobuf==3.6.1
     - pydot==1.2.4
     - pyparsing==2.3.0
     - pytz==2018.7
+    - pywavelets==1.0.1
     - pyyaml==3.13
     - requests==2.20.0
+    - scikit-image==0.14.1
     - scikit-learn==0.20.1
-    - scipy==1.1.0
+    - scipy==1.2.0
     - seaborn==0.9.0
     - send2trash==1.5.0
     - snowballstemmer==1.2.1
@@ -105,6 +111,7 @@ dependencies:
     - termcolor==1.1.0
     - terminado==0.8.1
     - testpath==0.4.2
+    - toolz==0.9.0
     - tpot==0.9.5
     - tqdm==4.28.1
     - traittypes==0.2.1
