--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -94,7 +94,7 @@ dependencies:
     - pyparsing==2.3.0
     - pytz==2018.7
     - pywavelets==1.0.1
-    - pyyaml==3.13
+    - pyyaml==4.2b4
     - requests==2.20.0
     - scikit-image==0.14.1
     - scikit-learn==0.20.2
