--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -4,20 +4,20 @@ channels:
 dependencies:
   - backcall=0.1.0=py36_0
   - ca-certificates=2018.03.07=0
-  - certifi=2018.10.15=py36_0
+  - certifi=2018.11.29=py36_0
   - decorator=4.3.0=py36_0
   - ipykernel=5.1.0=py36h39e3cac_0
-  - ipython=7.1.1=py36h39e3cac_0
+  - ipython=7.2.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
-  - jedi=0.13.1=py36_0
-  - jupyter_client=5.2.3=py36_0
+  - jedi=0.13.2=py36_0
+  - jupyter_client=5.2.4=py36_0
   - jupyter_core=4.4.0=py36_0
   - libedit=3.1.20170329=h6b74fdf_2
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
-  - ncurses=6.1=hf484d3e_0
+  - ncurses=6.1=he6710b0_1
   - openssl=1.1.1a=h7b6447c_0
   - parso=0.3.1=py36_0
   - pexpect=4.6.0=py36_0
@@ -25,13 +25,13 @@ dependencies:
   - pip=18.1=py36_0
   - prompt_toolkit=2.0.7=py36_0
   - ptyprocess=0.6.0=py36_0
-  - pygments=2.2.0=py36_0
+  - pygments=2.3.1=py36_0
   - python=3.6.8=h0371630_0
   - python-dateutil=2.7.5=py36_0
   - pyzmq=17.1.2=py36h14c3975_0
   - readline=7.0=h7b6447c_5
-  - setuptools=40.6.2=py36_0
-  - six=1.11.0=py36_1
+  - setuptools=40.6.3=py36_0
+  - six=1.12.0=py36_0
   - sqlite=3.26.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - tornado=5.1.1=py36h7b6447c_0
@@ -66,10 +66,10 @@ dependencies:
     - idna==2.7
     - imagesize==1.1.0
     - imbalanced-learn==0.4.3
-    - ipyleaflet==0.9.1
+    - ipyleaflet==0.9.2
     - ipywidgets==7.4.2
     - jinja2==2.10
-    - joblib==0.13.0
+    - joblib==0.13.1
     - jsonschema==2.6.0
     - keras==2.2.4
     - keras-applications==1.0.6
@@ -82,8 +82,8 @@ dependencies:
     - nbconvert==5.4.0
     - nbformat==4.4.0
     - networkx==2.2
-    - notebook==5.7.2
-    - numpy==1.15.4
+    - notebook==5.7.4
+    - numpy==1.16.0
     - packaging==18.0
     - pandas==0.23.4
     - pandocfilters==1.4.2
@@ -95,7 +95,7 @@ dependencies:
     - pytz==2018.7
     - pywavelets==1.0.1
     - pyyaml==4.2b4
-    - requests==2.20.0
+    - requests==2.21.0
     - scikit-image==0.14.1
     - scikit-learn==0.20.2
     - scipy==1.2.0
@@ -122,5 +122,5 @@ dependencies:
     - widgetsnbextension==3.4.2
     - xarray==0.10.7
     - xgboost==0.81
-prefix: /opt/conda/envs/datascience36
+prefix: /home/alberto/anaconda3/envs/datascience36
 
