--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -3,34 +3,34 @@ channels:
   - defaults
 dependencies:
   - backcall=0.1.0=py36_0
-  - ca-certificates=2018.03.07=0
+  - ca-certificates=2019.1.23=0
   - certifi=2018.11.29=py36_0
-  - decorator=4.3.0=py36_0
+  - decorator=4.3.2=py36_0
   - ipykernel=5.1.0=py36h39e3cac_0
   - ipython=7.2.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
   - jedi=0.13.2=py36_0
   - jupyter_client=5.2.4=py36_0
   - jupyter_core=4.4.0=py36_0
-  - libedit=3.1.20170329=h6b74fdf_2
+  - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=8.2.0=hdf63c60_1
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - ncurses=6.1=he6710b0_1
   - openssl=1.1.1a=h7b6447c_0
-  - parso=0.3.1=py36_0
+  - parso=0.3.2=py36_0
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
-  - pip=18.1=py36_0
-  - prompt_toolkit=2.0.7=py36_0
+  - pip=19.0.1=py36_0
+  - prompt_toolkit=2.0.8=py_0
   - ptyprocess=0.6.0=py36_0
   - pygments=2.3.1=py36_0
   - python=3.6.8=h0371630_0
   - python-dateutil=2.7.5=py36_0
-  - pyzmq=17.1.2=py36h14c3975_0
+  - pyzmq=17.1.2=py36he6710b0_2
   - readline=7.0=h7b6447c_5
-  - setuptools=40.6.3=py36_0
+  - setuptools=40.7.3=py36_0
   - six=1.12.0=py36_0
   - sqlite=3.26.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
@@ -39,7 +39,7 @@ dependencies:
   - wcwidth=0.1.7=py36_0
   - wheel=0.32.3=py36_0
   - xz=5.2.4=h14c3975_4
-  - zeromq=4.2.5=hf484d3e_1
+  - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - pip:
     - absl-py==0.6.1
@@ -83,9 +83,9 @@ dependencies:
     - nbformat==4.4.0
     - networkx==2.2
     - notebook==5.7.4
-    - numpy==1.16.0
+    - numpy==1.16.1
     - packaging==18.0
-    - pandas==0.23.4
+    - pandas==0.24.1
     - pandocfilters==1.4.2
     - pillow==5.3.0
     - prometheus-client==0.4.2
@@ -96,13 +96,13 @@ dependencies:
     - pywavelets==1.0.1
     - pyyaml==4.2b4
     - requests==2.21.0
-    - scikit-image==0.14.1
+    - scikit-image==0.14.2
     - scikit-learn==0.20.2
-    - scipy==1.2.0
+    - scipy==1.2.1
     - seaborn==0.9.0
     - send2trash==1.5.0
     - snowballstemmer==1.2.1
-    - sphinx==1.8.1
+    - sphinx==1.8.4
     - sphinx-rtd-theme==0.4.2
     - sphinxcontrib-websupport==1.1.0
     - stopit==1.1.2
