--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -4,12 +4,11 @@ channels:
 dependencies:
   - backcall=0.1.0=py36_0
   - ca-certificates=2019.1.23=0
-  - certifi=2018.11.29=py36_0
-  - decorator=4.3.2=py36_0
+  - certifi=2019.3.9=py36_0
   - ipykernel=5.1.0=py36h39e3cac_0
-  - ipython=7.2.0=py36h39e3cac_0
+  - ipython=7.3.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
-  - jedi=0.13.2=py36_0
+  - jedi=0.13.3=py36_0
   - jupyter_client=5.2.4=py36_0
   - jupyter_core=4.4.0=py36_0
   - libedit=3.1.20181209=hc058e9b_0
@@ -18,109 +17,115 @@ dependencies:
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1a=h7b6447c_0
-  - parso=0.3.2=py36_0
+  - openssl=1.1.1b=h7b6447c_1
+  - parso=0.3.4=py36_0
   - pexpect=4.6.0=py36_0
   - pickleshare=0.7.5=py36_0
-  - pip=19.0.1=py36_0
-  - prompt_toolkit=2.0.8=py_0
+  - pip=19.0.3=py36_0
+  - prompt_toolkit=2.0.9=py36_0
   - ptyprocess=0.6.0=py36_0
   - pygments=2.3.1=py36_0
   - python=3.6.8=h0371630_0
-  - python-dateutil=2.7.5=py36_0
-  - pyzmq=17.1.2=py36he6710b0_2
+  - python-dateutil=2.8.0=py36_0
   - readline=7.0=h7b6447c_5
-  - setuptools=40.7.3=py36_0
+  - setuptools=40.8.0=py36_0
   - six=1.12.0=py36_0
-  - sqlite=3.26.0=h7b6447c_0
+  - sqlite=3.27.2=h7b6447c_0
   - tk=8.6.8=hbc83047_0
-  - tornado=5.1.1=py36h7b6447c_0
+  - tornado=6.0.1=py36h7b6447c_0
   - traitlets=4.3.2=py36_0
   - wcwidth=0.1.7=py36_0
-  - wheel=0.32.3=py36_0
+  - wheel=0.33.1=py36_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - pip:
-    - absl-py==0.6.1
+    - absl-py==0.7.1
     - alabaster==0.7.12
     - astor==0.7.1
+    - attrs==19.1.0
     - babel==2.6.0
-    - bleach==3.0.2
+    - bleach==3.1.0
     - branca==0.3.1
     - chardet==3.0.4
-    - cloudpickle==0.6.1
+    - cloudpickle==0.8.0
     - cycler==0.10.0
-    - dask==1.0.0
+    - dask==1.1.4
     - deap==1.2.2
+    - decorator==4.4.0
     - defusedxml==0.5.0
     - docutils==0.14
-    - entrypoints==0.2.3
+    - entrypoints==0.3
     - findspark==1.3.0
-    - folium==0.7.0
-    - gast==0.2.0
+    - folium==0.8.3
+    - gast==0.2.2
     - geojson==2.4.1
     - graphviz==0.10.1
-    - grpcio==1.16.0
-    - h5py==2.8.0
-    - idna==2.7
+    - grpcio==1.19.0
+    - h5py==2.9.0
+    - idna==2.8
     - imagesize==1.1.0
     - imbalanced-learn==0.4.3
-    - ipyleaflet==0.9.2
+    - ipyleaflet==0.10.0
     - ipywidgets==7.4.2
     - jinja2==2.10
-    - joblib==0.13.1
-    - jsonschema==2.6.0
+    - joblib==0.13.2
+    - jsonschema==3.0.1
     - keras==2.2.4
-    - keras-applications==1.0.6
-    - keras-preprocessing==1.0.5
+    - keras-applications==1.0.7
+    - keras-preprocessing==1.0.9
     - kiwisolver==1.0.1
     - markdown==3.0.1
-    - markupsafe==1.1.0
-    - matplotlib==3.0.2
+    - markupsafe==1.1.1
+    - matplotlib==3.0.3
     - mistune==0.8.4
-    - nbconvert==5.4.0
+    - mock==2.0.0
+    - nbconvert==5.4.1
     - nbformat==4.4.0
     - networkx==2.2
-    - notebook==5.7.4
-    - numpy==1.16.1
-    - packaging==18.0
-    - pandas==0.24.1
+    - notebook==5.7.6
+    - numpy==1.16.2
+    - packaging==19.0
+    - pandas==0.24.2
     - pandocfilters==1.4.2
-    - pillow==5.3.0
-    - prometheus-client==0.4.2
-    - protobuf==3.6.1
-    - pydot==1.2.4
-    - pyparsing==2.3.0
-    - pytz==2018.7
-    - pywavelets==1.0.1
-    - pyyaml==4.2b4
+    - pbr==5.1.3
+    - pillow==5.4.1
+    - prometheus-client==0.6.0
+    - protobuf==3.7.0
+    - pydot==1.4.1
+    - pyparsing==2.3.1
+    - pyrsistent==0.14.11
+    - pytz==2018.9
+    - pywavelets==1.0.2
+    - pyyaml==5.1
+    - pyzmq==18.0.1
     - requests==2.21.0
     - scikit-image==0.14.2
-    - scikit-learn==0.20.2
+    - scikit-learn==0.20.3
     - scipy==1.2.1
     - seaborn==0.9.0
     - send2trash==1.5.0
     - snowballstemmer==1.2.1
-    - sphinx==1.8.4
-    - sphinx-rtd-theme==0.4.2
+    - sphinx==1.8.5
+    - sphinx-rtd-theme==0.4.3
     - sphinxcontrib-websupport==1.1.0
     - stopit==1.1.2
-    - tensorboard==1.12.0
-    - tensorflow==1.12.0
+    - tensorboard==1.13.1
+    - tensorflow==1.13.1
+    - tensorflow-estimator==1.13.0
     - termcolor==1.1.0
     - terminado==0.8.1
     - testpath==0.4.2
     - toolz==0.9.0
-    - tpot==0.9.5
-    - tqdm==4.28.1
+    - tpot==0.9.6
+    - tqdm==4.31.1
     - traittypes==0.2.1
     - update-checker==0.16
     - urllib3==1.24.1
     - webencodings==0.5.1
     - werkzeug==0.14.1
     - widgetsnbextension==3.4.2
-    - xarray==0.10.7
-    - xgboost==0.81
+    - xarray==0.12.0
+    - xgboost==0.82
 prefix: /home/alberto/anaconda3/envs/datascience36
 
