--- a/master/work_dir/datascience36.yaml
+++ b/master/work_dir/datascience36.yaml
@@ -7,7 +7,7 @@ dependencies:
   - certifi=2019.3.9=py36_0
   - decorator=4.4.0=py36_1
   - ipykernel=5.1.0=py36h39e3cac_0
-  - ipython=7.4.0=py36h39e3cac_0
+  - ipython=7.5.0=py36h39e3cac_0
   - ipython_genutils=0.2.0=py36_0
   - jedi=0.13.3=py36_0
   - jupyter_client=5.2.4=py36_0
@@ -19,22 +19,25 @@ dependencies:
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - ncurses=6.1=he6710b0_1
   - openssl=1.1.1b=h7b6447c_1
+  - parso=0.4.0=py_0
+  - pexpect=4.7.0=py36_0
   - pickleshare=0.7.5=py36_0
-  - pip=19.0.3=py36_0
+  - pip=19.1.1=py36_0
   - prompt_toolkit=2.0.9=py36_0
   - ptyprocess=0.6.0=py36_0
-  - pygments=2.3.1=py36_0
+  - pygments=2.4.0=py_0
   - python=3.6.8=h0371630_0
   - python-dateutil=2.8.0=py36_0
+  - pyzmq=18.0.0=py36he6710b0_0
   - readline=7.0=h7b6447c_5
-  - setuptools=40.8.0=py36_0
+  - setuptools=41.0.1=py36_0
   - six=1.12.0=py36_0
-  - sqlite=3.27.2=h7b6447c_0
+  - sqlite=3.28.0=h7b6447c_0
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.2=py36h7b6447c_0
   - traitlets=4.3.2=py36_0
   - wcwidth=0.1.7=py36_0
-  - wheel=0.33.1=py36_0
+  - wheel=0.33.2=py36_0
   - xz=5.2.4=h14c3975_4
   - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
@@ -47,11 +50,9 @@ dependencies:
     - bleach==3.1.0
     - branca==0.3.1
     - chardet==3.0.4
-    - cloudpickle==0.8.1
     - cycler==0.10.0
-    - dask==1.1.5
     - deap==1.2.2
-    - defusedxml==0.5.0
+    - defusedxml==0.6.0
     - docutils==0.14
     - entrypoints==0.3
     - findspark==1.3.0
@@ -59,13 +60,13 @@ dependencies:
     - gast==0.2.2
     - geojson==2.4.1
     - graphviz==0.10.1
-    - grpcio==1.19.0
+    - grpcio==1.20.1
     - h5py==2.9.0
     - idna==2.8
     - imageio==2.5.0
     - imagesize==1.1.0
     - imbalanced-learn==0.4.3
-    - ipyleaflet==0.10.1
+    - ipyleaflet==0.10.2
     - ipywidgets==7.4.2
     - jinja2==2.10.1
     - joblib==0.13.2
@@ -73,49 +74,44 @@ dependencies:
     - keras==2.2.4
     - keras-applications==1.0.7
     - keras-preprocessing==1.0.9
-    - kiwisolver==1.0.1
+    - kiwisolver==1.1.0
     - markdown==3.1
     - markupsafe==1.1.1
     - matplotlib==3.0.3
     - mistune==0.8.4
-    - mock==2.0.0
-    - nbconvert==5.4.1
+    - mock==3.0.5
+    - nbconvert==5.5.0
     - nbformat==4.4.0
-    - networkx==2.2
+    - networkx==2.3
     - notebook==5.7.8
-    - numpy==1.16.2
+    - numpy==1.16.3
     - packaging==19.0
     - pandas==0.24.2
     - pandocfilters==1.4.2
-    - parso==0.4.0
-    - pbr==5.1.3
-    - pexpect==4.7.0
     - pillow==6.0.0
     - prometheus-client==0.6.0
     - protobuf==3.7.1
     - pydot==1.4.1
-    - pyparsing==2.3.1
-    - pyrsistent==0.14.11
-    - pytz==2018.9
-    - pywavelets==1.0.2
+    - pyparsing==2.4.0
+    - pyrsistent==0.15.1
+    - pytz==2019.1
+    - pywavelets==1.0.3
     - pyyaml==5.1
-    - pyzmq==18.0.1
     - requests==2.21.0
     - scikit-image==0.15.0
-    - scikit-learn==0.20.3
+    - scikit-learn==0.21.0
     - scipy==1.2.1
     - seaborn==0.9.0
     - send2trash==1.5.0
     - snowballstemmer==1.2.1
-    - sphinx==2.0.0
+    - sphinx==2.0.1
     - sphinx-rtd-theme==0.4.3
     - sphinxcontrib-applehelp==1.0.1
     - sphinxcontrib-devhelp==1.0.1
-    - sphinxcontrib-htmlhelp==1.0.1
+    - sphinxcontrib-htmlhelp==1.0.2
     - sphinxcontrib-jsmath==1.0.1
     - sphinxcontrib-qthelp==1.0.2
     - sphinxcontrib-serializinghtml==1.1.3
-    - sphinxcontrib-websupport==1.1.0
     - stopit==1.1.2
     - tensorboard==1.13.1
     - tensorflow==1.13.1
@@ -123,12 +119,11 @@ dependencies:
     - termcolor==1.1.0
     - terminado==0.8.2
     - testpath==0.4.2
-    - toolz==0.9.0
     - tpot==0.10.1
     - tqdm==4.31.1
     - traittypes==0.2.1
     - update-checker==0.16
-    - urllib3==1.24.2
+    - urllib3==1.24.3
     - webencodings==0.5.1
     - werkzeug==0.15.2
     - widgetsnbextension==3.4.2
