--- a/master/Dockerfile
+++ b/master/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -sL --retry 3 \
 
 # SPARK
 
-ENV SPARK_VERSION 3.4.1
+ENV SPARK_VERSION 3.5.0
 ENV SPARK_PACKAGE spark-${SPARK_VERSION}-bin-without-hadoop
 ENV SPARK_HOME /usr/spark-${SPARK_VERSION}
 ENV SPARK_DIST_CLASSPATH="$HADOOP_HOME/etc/hadoop/*:$HADOOP_HOME/share/hadoop/common/lib/*:$HADOOP_HOME/share/hadoop/common/*:$HADOOP_HOME/share/hadoop/hdfs/*:$HADOOP_HOME/share/hadoop/hdfs/lib/*:$HADOOP_HOME/share/hadoop/hdfs/*:$HADOOP_HOME/share/hadoop/yarn/lib/*:$HADOOP_HOME/share/hadoop/yarn/*:$HADOOP_HOME/share/hadoop/mapreduce/lib/*:$HADOOP_HOME/share/hadoop/mapreduce/*:$HADOOP_HOME/share/hadoop/tools/lib/*"
@@ -36,7 +36,7 @@ RUN curl -sL --retry 3 \
 
 WORKDIR $SPARK_HOME
 
-CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
+CMD ["sbin/start-master.sh"]
 
 FROM spark as spark-master
 
@@ -71,7 +71,7 @@ ADD ./work_dir /usr/spark-${SPARK_VERSION}/work_dir
 
 RUN python3 -m venv .
 RUN python3 -m pip install pip==23.2.1
-RUN python3 -m pip install setuptools==68.0.0
+RUN python3 -m pip install setuptools==68.2.2
 RUN python3 -m pip install --no-cache-dir -r requirements.txt
 
 # Compiling Scala example with MAVEN
@@ -80,4 +80,4 @@ WORKDIR /usr/spark-${SPARK_VERSION}/work_dir/scala_apps/example
 RUN mvn package
 
 WORKDIR $SPARK_HOME
-CMD ["bin/spark-class", "org.apache.spark.deploy.master.Master"]
+CMD ["sbin/start-master.sh"]
