--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,13 @@ services:
     build:
       context: ./master
       target: spark-master
-    command: bin/spark-class org.apache.spark.deploy.master.Master -h master
+    command: sbin/start-master.sh
     init: true
     hostname: master
     environment:
       MASTER: spark://master:7077
       SPARK_CONF_DIR: /conf
+      SPARK_NO_DAEMONIZE: true
       SPARK_PUBLIC_DNS: localhost
     expose:
       - 7001
@@ -32,16 +33,19 @@ services:
     build:
       context: ./master
       target: spark
-    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://master:7077
+    command: sbin/start-worker.sh spark://master:7077
     init: true
+    depends_on:
+      - master
     hostname: worker
     environment:
       SPARK_CONF_DIR: /conf
+      SPARK_NO_DAEMONIZE: true
+      SPARK_PUBLIC_DNS: localhost
       SPARK_WORKER_CORES: 2
       SPARK_WORKER_MEMORY: 2g
       SPARK_WORKER_PORT: 8881
       SPARK_WORKER_WEBUI_PORT: 8081
-      SPARK_PUBLIC_DNS: localhost
     expose:
       - 7012
       - 8881
