--- a/master/work_dir/requirements.txt
+++ b/master/work_dir/requirements.txt
@@ -1,22 +1,22 @@
 findspark==2.0.1
-folium==0.15.1
+folium==0.16.0
 geojson==3.1.0
 graphviz==0.20.1
 imbalanced-learn==0.12.0
 ipyleaflet==0.18.2
 ipywidgets==8.1.2
 joblib==1.3.2
-jupyterlab==4.1.1
+jupyterlab==4.1.4
 matplotlib==3.8.3
 numpy==1.26.4
-pandas==2.2.0
+pandas==2.2.1
 pydot==2.0.0
 requests==2.31.0
 scikit-image==0.22.0
-scikit-learn==1.4.0
+scikit-learn==1.4.1.post1
 seaborn==0.13.2
 Sphinx==7.2.6
 sphinx-rtd-theme==2.0.0
-tensorflow==2.15.0
-TPOT==0.12.1
+tensorflow==2.16.1
+TPOT==0.12.2
 xgboost==2.0.3
