--- a/master/work_dir/requirements.txt
+++ b/master/work_dir/requirements.txt
@@ -1,17 +1,18 @@
 findspark==2.0.1
 folium==0.16.0
 geojson==3.1.0
-graphviz==0.20.1
+graphviz==0.20.3
 imbalanced-learn==0.12.0
 ipyleaflet==0.18.2
 ipywidgets==8.1.2
 joblib==1.3.2
-jupyterlab==4.1.4
+jupyterlab==4.1.5
 matplotlib==3.8.3
 numpy==1.26.4
 pandas==2.2.1
 pydot==2.0.0
 requests==2.31.0
+ruff==0.3.4
 scikit-image==0.22.0
 scikit-learn==1.4.1.post1
 seaborn==0.13.2
