--- a/master/work_dir/requirements.txt
+++ b/master/work_dir/requirements.txt
@@ -2,21 +2,21 @@ findspark==2.0.1
 folium==0.16.0
 geojson==3.1.0
 graphviz==0.20.3
-imbalanced-learn==0.12.0
+imbalanced-learn==0.12.2
 ipyleaflet==0.18.2
 ipywidgets==8.1.2
-joblib==1.3.2
-jupyterlab==4.1.5
-matplotlib==3.8.3
+joblib==1.4.0
+jupyterlab==4.1.6
+matplotlib==3.8.4
 numpy==1.26.4
-pandas==2.2.1
+pandas==2.2.2
 pydot==2.0.0
 requests==2.31.0
-ruff==0.3.4
-scikit-image==0.22.0
-scikit-learn==1.4.1.post1
+ruff==0.4.1
+scikit-image==0.23.2
+scikit-learn==1.4.2
 seaborn==0.13.2
-Sphinx==7.2.6
+Sphinx==7.3.7
 sphinx-rtd-theme==2.0.0
 tensorflow==2.16.1
 TPOT==0.12.2
