--- a/master/work_dir/requirements.txt
+++ b/master/work_dir/requirements.txt
@@ -6,13 +6,14 @@ imbalanced-learn==0.12.2
 ipyleaflet==0.19.0
 ipywidgets==8.1.2
 joblib==1.4.2
-jupyterlab==4.1.8
+jupyterlab==4.2.0
 matplotlib==3.8.4
 numpy==1.26.4
 pandas==2.2.2
+pur==7.3.1
 pydot==2.0.0
 requests==2.31.0
-ruff==0.4.3
+ruff==0.4.4
 scikit-image==0.23.2
 scikit-learn==1.4.2
 seaborn==0.13.2
