--- a/master/work_dir/requirements.txt
+++ b/master/work_dir/requirements.txt
@@ -3,21 +3,22 @@ folium==0.17.0
 geojson==3.1.0
 graphviz==0.20.3
 imbalanced-learn==0.12.3
-ipyleaflet==0.19.1
+ipyleaflet==0.19.2
 ipywidgets==8.1.3
 joblib==1.4.2
-jupyterlab==4.2.3
+jupyterlab==4.2.4
 matplotlib==3.9.1
 numpy==1.26.4
 pandas==2.2.2
+pre-commit==3.7.1
 pur==7.3.2
-pydot==2.0.0
+pydot==3.0.1
 requests==2.32.3
-ruff==0.5.1
+ruff==0.5.5
 scikit-image==0.24.0
 scikit-learn==1.5.1
 seaborn==0.13.2
-Sphinx==7.3.7
+Sphinx==7.4.7
 sphinx-rtd-theme==2.0.0
 tensorflow==2.17.0
 TPOT==0.12.2
