--- a/master/work_dir/pyproject.toml
+++ b/master/work_dir/pyproject.toml
@@ -1,3 +1,18 @@
+[project]
+name = "bigdata_docker"
+version = "1.0.0"
+authors = [
+  { name="alvertogit" },
+]
+description = "A containerized cluster for Big Data"
+readme = "README.md"
+classifiers = [
+    "Programming Language :: Python :: 3",
+]
+
+[project.urls]
+Homepage = "https://github.com/alvertogit/bigdata_docker"
+
 [tool.ruff]
 extend-include = ["*.ipynb"]
 
